updated experince info

--- a/Portfolio-Project/index.html
+++ b/Portfolio-Project/index.html
@@ -113,7 +113,7 @@
     <article>
         <h3>Software Solutions Architect - Neudesic, Irvine, CA</h3>
         <ul>
-            <li>Orchestrated the development and deployment of a full-stack call monitoring application, enhancing client functionalities.</li>
+            <li>Collaborated and assisted in the development and deployment of a full-stack call monitoring application, enhancing client functionalities.</li>
             <li>Utilized a comprehensive tech stack for both front-end and back-end development, delivering a scalable and robust application.</li>
             <li>Implemented design and functionality improvements, significantly enhancing application performance and user satisfaction.</li>
         </ul>
