added media devices orientation for nav bar

--- a/Portfolio-Project/index.html
+++ b/Portfolio-Project/index.html
@@ -12,149 +12,159 @@
   <meta property="og:url" content="https://tonybautista.com"> 
   <!-- Font Awesome for social icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="main.css">
 </head>
-<body id="home">
+  <body id="home">
     <header class="profile-header">
-        <a href="#home" class="profile-image-link">
+      <a href="#home" class="profile-image-link">
           <div class="profile-image" style="background-image: url('profile-pic.jpeg');"></div>
-        </a>
-          <h1>Tony Bautista</h1>
-          <h2>Studying Computer Science at Chapman University</h2>
-          <p>Welcome to my digital space where I share my journey in technology, my projects, and professional insights.</p>
-            <div class="social-links">
+            </a>
+              <h1>Tony Bautista</h1>
+              <h2>Studying Computer Science at Chapman University</h2>
+                <p>Welcome to my digital space where I share my journey in technology, my projects, and professional insights.</p>
+          <div class="social-links">
               <!-- Social Links -->
-               <a href="https://github.com/SoulNight" target="_blank" rel="noopener noreferrer" aria-label="GitHub"><i class="fab fa-github"></i></a>
-               <a href="https://www.linkedin.com/in/tony-bautista-a9a9763/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+              <a href="https://github.com/SoulNight" target="_blank" rel="noopener noreferrer" aria-label="GitHub"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/tony-bautista-a9a9763/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
           </div>
-    </header>
-  <!-- Navigation Bar -->
-  <nav id="navbar">
-    <a href="#home" class="nav-profile-image-link">
-      <img src="profile-pic.jpeg" alt="Profile" class="nav-profile-image"/>
-    </a>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#experience">Experience</a></li>
-      </ul>
-  </nav>
-    <!-- Main content -->
-  <main>
-    <!-- About Section -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>As a seasoned Mechanical Technician who has transitioned into software development, I possess a genuine drive for crafting inventive solutions. With a rich background in precision assembly for spacecraft structures and antenna systems acquired during my tenure at Northrop Grumman, I bring a blend of technical prowess and strategic insight. Proficient in languages such as Python, JavaScript, and C++, complemented by a solid understanding of mechanical engineering principles, I am poised to deliver innovative software solutions that push the boundaries of technology. My unwavering commitment to excellence and eagerness to offer a fresh perspective make me a valuable asset poised to contribute significantly to advancing cutting-edge software solutions."</p> 
-    </section>
-    <!-- Projects Section -->
-<section id="projects">
-    <h2>Projects</h2>
-    <!-- James Webb Space Telescope -->
-    <article class="project-entry">
-      <a href="https://www.northropgrumman.com" target="_blank" rel="noopener noreferrer">
-        <img src="webb.png" alt="James Webb Space Telescope Logo" class="project-logo">
-      </a>
-      <div class="project-info">
-        <h3>James Webb Space Telescope - Northrop Grumman</h3>
-        <p>Contributed to the precision assembly and integration of the James Webb Space Telescope. This project involved collaborative efforts with international space agencies to construct and deploy a major space observatory, aiming to expand our understanding of the universe.</p>
-        <a href="https://www.northropgrumman.com/space/james-webb-space-telescope" target="_blank" rel="noopener noreferrer">View Project</a>
-      </div>
-    </article>
-    <!-- Mars 2020 Rover -->
-    <article class="project-entry">
-      <a href="https://mars.nasa.gov/mars2020/mission/overview/" target="_blank" rel="noopener noreferrer">
-        <img src="Mars2020.png" alt="NASA JPL Logo" class="project-logo">
-      </a>
-      <div class="project-info">
-        <h3>Mars 2020 Rover - JPL/NASA</h3>
-        <p>Supported the Activity Planning and Sequencing Subsystem Team for the Mars 2020 Rover project at JPL/NASA. Involved in software integration and testing, using advanced tools and writing Python scripts to enhance the mission's operational efficiency and reliability.</p>
-        <a href="https://mars.nasa.gov/mars2020/" target="_blank" rel="noopener noreferrer">View Project</a>
-      </div>
-    </article>
-    <!-- Game of Life -->
-    <article class="project-entry">
-      <a href="https://github.com" target="_blank" rel="noopener noreferrer">
-        <img src="github-logo.png" alt="GitHub Logo" class="project-logo">
-      </a>
-      <div class="project-info">
-        <h3>Game of Life</h3>
-        <p>Developed a simulation of Conway's Game of Life, a cellular automaton that illustrates complex behaviors from simple rules. This project showcased proficiency in software development, algorithm optimization, and understanding of discrete mathematics.</p>
-        <a href="https://github.com/SoulNight/SP22CPSC350-02/tree/main/Assignment%204" target="_blank" rel="noopener noreferrer">View Project</a>
-      </div>
-    </article>
-  </section>
-    <!-- Experience Section -->
-<section id="experience">
-    <h2>Professional Experience</h2>
-    <!-- Northrop Grumman Experience -->
-    <article>
-        <h3>Mechanical Technician - Northrop Grumman, Redondo Beach, CA</h3>
-        <p>July 2019 - Present</p>
-        <ul>
-            <li>Actively involved in precision assembly and integration of spacecraft structures, antenna systems, and alignments, consistently adhering to stringent engineering specifications and high-quality standards.</li>
-            <li>Engaged in high-precision tasks utilizing advanced engineering techniques to enhance aerospace system performance and reliability.</li>
-            <li>Played a significant role in collaborative efforts assembling structural components for space missions.</li>
-            <li>Collaborated with international space agencies for the construction and launch of the James Webb Space Telescope.</li>
-            <li>Contributed to the precise mechanical deployment of the telescope's sunshield, essential for its space operation.</li>
-        </ul>
-    </article>
-    <!-- JPL/NASA Internship -->
-    <article>
-        <h3>Testing Support Mars 2020 Rover - JPL/NASA, La Canada Flintridge, CA</h3>
-        <ul>
-            <li>Supported the Activity Planning and Sequencing Subsystem Team, ensuring testing processes aligned with mission goals.</li>
-            <li>Leveraged advanced tools for software integration and testing, enhancing the project's reliability and performance metrics.</li>
-            <li>Developed Python scripts for data parsing, ensuring data integrity and system efficiency.</li>
-            <li>Generated comprehensive reports from test data to provide actionable insights for software improvement.</li>
-            <li>Designed strategic test plans and procedures, establishing a solid foundation for system reliability and quality assurance.</li>
-        </ul>
-    </article>
-    <!-- Neudesic Internship -->
-    <article>
-        <h3>Software Solutions Architect - Neudesic, Irvine, CA</h3>
-        <ul>
-            <li>Collaborated and assisted in the development and deployment of a full-stack call monitoring application, enhancing client functionalities.</li>
-            <li>Utilized a comprehensive tech stack for both front-end and back-end development, delivering a scalable and robust application.</li>
-            <li>Implemented design and functionality improvements, significantly enhancing application performance and user satisfaction.</li>
-        </ul>
-    </article>
-    <!-- Apple Inc Experience -->
-    <article>
-        <h3>Technical Expert - Apple Inc, Mission Viejo, CA</h3>
-        <ul>
-            <li>Provided expert support, resolving technical issues across various devices and delivering high-quality customer service.</li>
-            <li>Advised on hardware and software solutions, integrating cybersecurity measures to enhance system security.</li>
-            <li>Conducted team training sessions on troubleshooting, customer service, and cybersecurity practices.</li>
-        </ul>
-    </article>
-    <!-- Saddleback/IVC Community College Experience -->
-    <article>
-        <h3>IT Project Specialist - Saddleback/IVC Community College, Mission Viejo, CA</h3>
-        <ul>
-            <li>Organized the integration of the SmartSchedule 3.0 system, significantly improving the academic scheduling experience.</li>
-            <li>Collaborated with stakeholders to tailor the system to user requirements, achieving a high user satisfaction rating.</li>
-            <li>Developed instructional content, enhancing system usability and accessibility for students.</li>
-        </ul>
-    </article>    
-  </main>
-    <script>
-        (function() {
-        var header = document.querySelector('header');
-        var navbar = document.getElementById('navbar');
-        var headerHeight = header.offsetHeight; // Get the height of the header
-        
-        function showNavOnScroll() {
-            if (window.scrollY > headerHeight) {
-            navbar.classList.add('nav-visible');
-            } else {
-            navbar.classList.remove('nav-visible');
-            }
-        }
-        window.addEventListener('scroll', showNavOnScroll);
-        })();
-    </script>
-      <footer>
-        <p>Copyright © Tony Bautista 2024</p>
-      </footer>
-</body>
+      </header>
+        <!-- Navigation Bar -->
+          <nav id="navbar">
+            <a href="#home" class="nav-profile-image-link">
+              <img src="profile-pic.jpeg" alt="Profile" class="nav-profile-image">
+            </a>
+              <a href="#home" class="nav-name-link">Tony Bautista</a>
+              <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#experience">Experience</a></li>
+              </ul>
+            <div class="navbar-social-links">
+              <a href="https://github.com/SoulNight" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/tony-bautista-a9a9763/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </div>
+          </nav>
+  <!-- Main content -->
+    <main>
+      <!-- About Section -->
+        <section id="about">
+            <h2>About Me</h2>
+            <p>As a seasoned Mechanical Technician who has transitioned into software development, I possess a genuine drive for crafting inventive solutions. With a rich background in precision assembly for spacecraft structures and antenna systems acquired during my tenure at Northrop Grumman, I bring a blend of technical prowess and strategic insight. Proficient in languages such as Python, JavaScript, and C++, complemented by a solid understanding of mechanical engineering principles, I am poised to deliver innovative software solutions that push the boundaries of technology. My unwavering commitment to excellence and eagerness to offer a fresh perspective make me a valuable asset poised to contribute significantly to advancing cutting-edge software solutions."</p> 
+        </section>
+      <!-- Projects Section -->
+      <section id="projects">
+        <h2>Projects</h2>
+          <!-- James Webb Space Telescope -->
+            <article class="project-entry">
+              <a href="https://www.northropgrumman.com" target="_blank" rel="noopener noreferrer">
+                <img src="webb.png" alt="James Webb Space Telescope Logo" class="project-logo">
+              </a>
+              <div class="project-info">
+                <h3>James Webb Space Telescope - Northrop Grumman</h3>
+                <p>Contributed to the precision assembly and integration of the James Webb Space Telescope. This project involved collaborative efforts with international space agencies to construct and deploy a major space observatory, aiming to expand our understanding of the universe.</p>
+                <a href="https://www.northropgrumman.com/space/james-webb-space-telescope" target="_blank" rel="noopener noreferrer">View Project</a>
+              </div>
+            </article>
+      <!-- Mars 2020 Rover -->
+        <article class="project-entry">
+          <a href="https://mars.nasa.gov/mars2020/mission/overview/" target="_blank" rel="noopener noreferrer">
+            <img src="Mars2020.png" alt="NASA JPL Logo" class="project-logo">
+          </a>
+          <div class="project-info">
+            <h3>Mars 2020 Rover - JPL/NASA</h3>
+            <p>Supported the Activity Planning and Sequencing Subsystem Team for the Mars 2020 Rover project at JPL/NASA. Involved in software integration and testing, using advanced tools and writing Python scripts to enhance the mission's operational efficiency and reliability.</p>
+            <a href="https://mars.nasa.gov/mars2020/" target="_blank" rel="noopener noreferrer">View Project</a>
+          </div>
+        </article>
+      <!-- Game of Life -->
+        <article class="project-entry">
+          <a href="https://github.com" target="_blank" rel="noopener noreferrer">
+            <img src="github-logo.png" alt="GitHub Logo" class="project-logo">
+          </a>
+          <div class="project-info">
+            <h3>Game of Life</h3>
+            <p>Developed a simulation of Conway's Game of Life, a cellular automaton that illustrates complex behaviors from simple rules. This project showcased proficiency in software development, algorithm optimization, and understanding of discrete mathematics.</p>
+            <a href="https://github.com/SoulNight/SP22CPSC350-02/tree/main/Assignment%204" target="_blank" rel="noopener noreferrer">View Project</a>
+          </div>
+        </article>
+      </section>
+      <!-- Experience Section -->
+        <section id="experience">
+            <h2>Professional Experience</h2>
+            <!-- Northrop Grumman Experience -->
+            <article>
+                <h3>Mechanical Technician - Northrop Grumman, Redondo Beach, CA</h3>
+                <p>July 2019 - Present</p>
+                <ul>
+                    <li>Actively involved in precision assembly and integration of spacecraft structures, antenna systems, and alignments, consistently adhering to stringent engineering specifications and high-quality standards.</li>
+                    <li>Engaged in high-precision tasks utilizing advanced engineering techniques to enhance aerospace system performance and reliability.</li>
+                    <li>Played a significant role in collaborative efforts assembling structural components for space missions.</li>
+                    <li>Collaborated with international space agencies for the construction and launch of the James Webb Space Telescope.</li>
+                    <li>Contributed to the precise mechanical deployment of the telescope's sunshield, essential for its space operation.</li>
+                </ul>
+            </article>
+            <!-- JPL/NASA Internship -->
+            <article>
+                <h3>Testing Support Mars 2020 Rover - JPL/NASA, La Canada Flintridge, CA</h3>
+                <ul>
+                    <li>Supported the Activity Planning and Sequencing Subsystem Team, ensuring testing processes aligned with mission goals.</li>
+                    <li>Leveraged advanced tools for software integration and testing, enhancing the project's reliability and performance metrics.</li>
+                    <li>Developed Python scripts for data parsing, ensuring data integrity and system efficiency.</li>
+                    <li>Generated comprehensive reports from test data to provide actionable insights for software improvement.</li>
+                    <li>Designed strategic test plans and procedures, establishing a solid foundation for system reliability and quality assurance.</li>
+                </ul>
+            </article>
+            <!-- Neudesic Internship -->
+            <article>
+                <h3>Software Solutions Architect - Neudesic, Irvine, CA</h3>
+                <ul>
+                    <li>Collaborated and assisted in the development and deployment of a full-stack call monitoring application, enhancing client functionalities.</li>
+                    <li>Utilized a comprehensive tech stack for both front-end and back-end development, delivering a scalable and robust application.</li>
+                    <li>Implemented design and functionality improvements, significantly enhancing application performance and user satisfaction.</li>
+                </ul>
+            </article>
+            <!-- Apple Inc Experience -->
+            <article>
+                <h3>Technical Expert - Apple Inc, Mission Viejo, CA</h3>
+                <ul>
+                    <li>Provided expert support, resolving technical issues across various devices and delivering high-quality customer service.</li>
+                    <li>Advised on hardware and software solutions, integrating cybersecurity measures to enhance system security.</li>
+                    <li>Conducted team training sessions on troubleshooting, customer service, and cybersecurity practices.</li>
+                </ul>
+            </article>
+            <!-- Saddleback/IVC Community College Experience -->
+            <article>
+                <h3>IT Project Specialist - Saddleback/IVC Community College, Mission Viejo, CA</h3>
+                <ul>
+                    <li>Organized the integration of the SmartSchedule 3.0 system, significantly improving the academic scheduling experience.</li>
+                    <li>Collaborated with stakeholders to tailor the system to user requirements, achieving a high user satisfaction rating.</li>
+                    <li>Developed instructional content, enhancing system usability and accessibility for students.</li>
+                </ul>
+            </article>
+          </section>    
+    </main>
+      <script>
+          (function() {
+          var header = document.querySelector('header');
+          var navbar = document.getElementById('navbar');
+          var headerHeight = header.offsetHeight; // Get the height of the header
+          
+          function showNavOnScroll() {
+              if (window.scrollY > headerHeight) {
+              navbar.classList.add('nav-visible');
+              } else {
+              navbar.classList.remove('nav-visible');
+              }
+          }
+          window.addEventListener('scroll', showNavOnScroll);
+          })();
+      </script>
+        <footer>
+          <p>Copyright © Tony Bautista 2024</p>
+        </footer>
+  </body>
 </html>
