Updated index.html and main.css with latest changes

--- a/Portfolio-Project/index.html
+++ b/Portfolio-Project/index.html
@@ -20,8 +20,9 @@
           <div class="profile-image" style="background-image: url('profile-pic.jpeg');"></div>
             </a>
               <h1>Tony Bautista</h1>
-              <h2>Studying Computer Science at Chapman University</h2>
-                <p>Welcome to my digital space where I share my journey in technology, my projects, and professional insights.</p>
+              <h3>United States Navy Veteran</h3>
+              <h2>Computer Science Graduate, Chapman University</h2>
+              <p>Explore my work in technology, software development, and engineering projects.</p>
           <div class="social-links">
               <!-- Social Links -->
               <a href="https://github.com/SoulNight" target="_blank" rel="noopener noreferrer" aria-label="GitHub"><i class="fab fa-github"></i></a>
@@ -53,8 +54,8 @@
       <!-- About Section -->
         <section id="about">
             <h2>About Me</h2>
-            <p>As a seasoned Mechanical Technician who has transitioned into software development, I possess a genuine drive for crafting inventive solutions. With a rich background in precision assembly for spacecraft structures and antenna systems acquired during my tenure at Northrop Grumman, I bring a blend of technical prowess and strategic insight. Proficient in languages such as Python, JavaScript, and C++, complemented by a solid understanding of mechanical engineering principles, I am poised to deliver innovative software solutions that push the boundaries of technology. My unwavering commitment to excellence and eagerness to offer a fresh perspective make me a valuable asset poised to contribute significantly to advancing cutting-edge software solutions."</p> 
-        </section>
+            <p>Bridging the gap between mechanical and software engineering, I have a proven track record in aerospace manufacturing, spacecraft integration, software development, and web engineering. At Northrop Grumman, I have worked on mission-critical projects, ensuring precision and efficiency in spacecraft hardware assembly. My expertise spans Python, JavaScript, C++, Swift, React, Firebase, and SQL, allowing me to develop full-stack applications, web solutions, and mobile apps. Additionally, I have experience in Fusion 360 and Prusa 3D modeling, enabling me to design and prototype mechanical components for engineering applications.</p>
+    </section>
       <!-- Projects Section -->
       <section id="projects">
         <h2>Projects</h2>
@@ -97,19 +98,22 @@
             <h2>Professional Experience</h2>
             <!-- Northrop Grumman Experience -->
             <article>
-                <h3>Mechanical Technician - Northrop Grumman, Redondo Beach, CA</h3>
-                <p>July 2019 - Present</p>
+                <h3>Space Systems - Mechanical Technician - Northrop Grumman, Redondo Beach, CA</h3>
                 <ul>
-                    <li>Actively involved in precision assembly and integration of spacecraft structures, antenna systems, and alignments, consistently adhering to stringent engineering specifications and high-quality standards.</li>
-                    <li>Engaged in high-precision tasks utilizing advanced engineering techniques to enhance aerospace system performance and reliability.</li>
-                    <li>Played a significant role in collaborative efforts assembling structural components for space missions.</li>
-                    <li>Collaborated with international space agencies for the construction and launch of the James Webb Space Telescope.</li>
-                    <li>Contributed to the precise mechanical deployment of the telescope's sunshield, essential for its space operation.</li>
+                  <li>Supported system-level integration of spacecraft hardware, working with antennas, RF components, and structural assemblies.</li>
+                  <li>Performed hands-on mechanical assembly, installation, and alignment of aerospace hardware, ensuring compliance with engineering tolerances.</li>
+                  <li>Assisted in the integration of composite and metallic structures, working with torque fastening, structural bonding, and match drilling.</li>
+                  <li>Utilized laser alignment and metrology tools to validate mechanical fit and positioning of flight hardware.</li>
+                  <li>Collaborated with engineers from multiple disciplines (mechanical, electrical, software) to troubleshoot and refine integration processes.</li>
+                  <li>Developed and used custom tooling and fixtures to support efficient assembly and integration of mission-critical components.</li>
+                  <li>Conducted validation testing on mechanical assemblies, contributing to environmental and vibration testing for flight readiness.</li>
+                  <li>Applied CAD models and engineering schematics to assist in mechanical integration and interface alignment.</li>
+                  <li>Contributed to the manufacturing, integration, and final assembly of high-profile aerospace missions, including the James Webb Space Telescope (JWST).</li>
                 </ul>
             </article>
             <!-- JPL/NASA Internship -->
             <article>
-                <h3>Testing Support Mars 2020 Rover - JPL/NASA, La Canada Flintridge, CA</h3>
+                <h3>Testing Support - Mars Perseverance Rover 2020- JPL/NASA, La Canada Flintridge, CA</h3>
                 <ul>
                     <li>Supported the Activity Planning and Sequencing Subsystem Team, ensuring testing processes aligned with mission goals.</li>
                     <li>Leveraged advanced tools for software integration and testing, enhancing the project's reliability and performance metrics.</li>
@@ -120,12 +124,11 @@
             </article>
             <!-- Neudesic Internship -->
             <article>
-                <h3>Software Solutions Architect - Neudesic, Irvine, CA</h3>
+                <h3>Software Solutions Architect Intern - Neudesic, Irvine, CA </h3>
                 <ul>
-                    <li>Collaborated and assisted in the development and deployment of a full-stack call monitoring application, enhancing client functionalities.</li>
-                    <li>Utilized a comprehensive tech stack for both front-end and back-end development, delivering a scalable and robust application.</li>
-                    <li>Implemented design and functionality improvements, significantly enhancing application performance and user satisfaction.</li>
-                </ul>
+                  <li>Worked with a remote and local group of interns to plan, create, test, and deploy a full-stack call monitoring software for Callgistics.com</li>
+                  <li>Software used: Bootstrap, Angular 4, HTML 5, JavaScript, CSS, Flask, Python, SQL Alchemy, Kubernetes, Google Cloud SQL, and Google Cloud Platform.</li>
+                  </ul>
             </article>
             <!-- Apple Inc Experience -->
             <article>
@@ -140,9 +143,9 @@
             <article>
                 <h3>IT Project Specialist - Saddleback/IVC Community College, Mission Viejo, CA</h3>
                 <ul>
-                    <li>Organized the integration of the SmartSchedule 3.0 system, significantly improving the academic scheduling experience.</li>
-                    <li>Collaborated with stakeholders to tailor the system to user requirements, achieving a high user satisfaction rating.</li>
-                    <li>Developed instructional content, enhancing system usability and accessibility for students.</li>
+                  <li>Managed and oversaw the implementation of SmartSchedule 3.0 system at Saddleback/IVC Community College, enabling students to plan their academic course schedule quickly and efficiently.</li>
+                  <li>Worked closely with stakeholders and end-users to ensure the system met their needs and requirements, achieving a 91% satisfaction rating.</li>
+                  <li>Streamlined class scheduling process and provided a user-friendly interface for students, reducing the need for direct support.</li>
                 </ul>
             </article>
           </section>    
