Updated index.html with latest modifications

--- a/Portfolio-Project/index.html
+++ b/Portfolio-Project/index.html
@@ -25,7 +25,7 @@
               <p>Explore my work in technology, software development, and engineering projects.</p>
           <div class="social-links">
               <!-- Social Links -->
-              <a href="https://github.com/SoulNight" target="_blank" rel="noopener noreferrer" aria-label="GitHub"><i class="fab fa-github"></i></a>
+              <a href="https://github.com/SoulNight?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="GitHub"><i class="fab fa-github"></i></a>
               <a href="https://www.linkedin.com/in/tony-bautista-a9a9763/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
           </div>
       </header>
@@ -81,15 +81,15 @@
             <a href="https://mars.nasa.gov/mars2020/" target="_blank" rel="noopener noreferrer">View Project</a>
           </div>
         </article>
-      <!-- Game of Life -->
+      <!-- Aurora-->
         <article class="project-entry">
-          <a href="https://github.com" target="_blank" rel="noopener noreferrer">
+          <a href="https://github.com/SoulNight/Aurora-Swift" target="_blank" rel="noopener noreferrer">
             <img src="github-logo.png" alt="GitHub Logo" class="project-logo">
           </a>
           <div class="project-info">
-            <h3>Game of Life</h3>
-            <p>Developed a simulation of Conway's Game of Life, a cellular automaton that illustrates complex behaviors from simple rules. This project showcased proficiency in software development, algorithm optimization, and understanding of discrete mathematics.</p>
-            <a href="https://github.com/SoulNight/SP22CPSC350-02/tree/main/Assignment%204" target="_blank" rel="noopener noreferrer">View Project</a>
+            <h3>Aurora - IOS Accesibility App</h3>
+            <p>Developed Aurora, an accessibility-focused mobile application designed to enhance the user experience for individuals with hearing impairments. The app features real-time device connectivity, live captions, customizable sound settings, and ASL integration, enabling seamless interaction with hearing aids, FM systems, and other assistive devices. Key contributions include implementing Bluetooth connectivity, UI/UX design for accessibility, and dynamic text size adjustments to ensure inclusivity. This project showcases expertise in Swift, SwiftUI, UI/UX accessibility standards, and assistive technology integration.</p>
+            <a href="https://github.com/SoulNight/Aurora-Swift" target="_blank" rel="noopener noreferrer">View Project</a>
           </div>
         </article>
       </section>
