Updated index.html with latest modifications

--- a/Portfolio-Project/index.html
+++ b/Portfolio-Project/index.html
@@ -54,7 +54,7 @@
       <!-- About Section -->
         <section id="about">
             <h2>About Me</h2>
-            <p>Bridging the gap between mechanical and software engineering, I have a proven track record in aerospace manufacturing, spacecraft integration, software development, and web engineering. At Northrop Grumman, I have worked on mission-critical projects, ensuring precision and efficiency in spacecraft hardware assembly. My expertise spans Python, JavaScript, C++, Swift, React, Firebase, and SQL, allowing me to develop full-stack applications, web solutions, and mobile apps. Additionally, I have experience in Fusion 360 and Prusa 3D modeling, enabling me to design and prototype mechanical components for engineering applications.</p>
+            <p>Bridging the gap between mechanical and software engineering, I specialize in aerospace manufacturing, spacecraft integration, and full-stack development. At Northrop Grumman, I contributed to mission-critical spacecraft assembly, ensuring precision and efficiency in hardware integration. My expertise spans Python, JavaScript, C++, Swift, React, Firebase, and SQL, enabling the development of full-stack applications, web solutions, and mobile apps. Additionally, I leverage Fusion 360 and Prusa 3D modeling to design and prototype mechanical components for engineering applications.</p>
     </section>
       <!-- Projects Section -->
       <section id="projects">
