Updated award section spacing and added Prosthetics images

--- a/Portfolio-Project/index.html
+++ b/Portfolio-Project/index.html
@@ -37,6 +37,7 @@
               <a href="#home" class="nav-name-link">Tony Bautista</a>
               <ul>
                 <li><a href="#about">About</a></li>
+                <li><a href="#awards">Awards</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experience">Experience</a></li>
               </ul>
@@ -54,8 +55,34 @@
       <!-- About Section -->
         <section id="about">
             <h2>About Me</h2>
-            <p>Bridging the gap between mechanical and software engineering, I specialize in aerospace manufacturing, spacecraft integration, and full-stack development. At Northrop Grumman, I contributed to mission-critical spacecraft assembly, ensuring precision and efficiency in hardware integration. My expertise spans Python, JavaScript, C++, Swift, React, Firebase, and SQL, enabling the development of full-stack applications, web solutions, and mobile apps. Additionally, I leverage Fusion 360 and Prusa 3D modeling to design and prototype mechanical components for engineering applications.</p>
+            <p>Bridging the gap between mechanical and software engineering, I specialize in aerospace manufacturing, spacecraft integration, and full-stack development. At Northrop Grumman, I contributed to mission-critical spacecraft assembly, ensuring precision and efficiency in hardware integration.</p>
+            <p>My expertise spans Python, JavaScript, C++, Swift, React, Firebase, and SQL, enabling me to build full-stack applications, web solutions, and mobile apps. I also apply Fusion 360 and Prusa 3D modeling to design and prototype mechanical components for engineering applications.</p>
+            <p>Beyond engineering, I have been involved in leadership and veteran advocacy. While at Saddleback College, I served as President of the Society of American Military Engineers (SAME) student chapter and Director of Veterans Affairs, leading initiatives to help veterans transition into STEM careers by connecting them with resources, mentorship, and industry opportunities. My contributions have been recognized with Congressional and Senatorial commendations for leadership and service.</p>
     </section>
+      <!-- Awards & Recognition Section -->
+      <section id="awards">
+        <h2>Awards & Recognition</h2>
+        <article class="award-entry">
+            <h3>Congressional Leadership Award</h3>
+            <p>Recognized for outstanding leadership and contributions to the veteran and engineering communities.</p>
+        </article>
+        <article class="award-entry">
+            <h3>Senatorial Commendation for Service</h3>
+            <p>Awarded for dedication to mentorship and supporting veteran career transitions into STEM fields.</p>
+        </article>
+        <article class="award-entry">
+            <h3>Student Veteran Leader of the Year</h3>
+            <p>Recognized by the <strong>California State Assembly, State Senate, and State Board of Equalization</strong> for outstanding leadership, mentorship, and service to student veterans at Saddleback College (2017-2018).</p>
+        </article>
+        <article class="award-entry">
+            <h3>President of Society of American Military Engineers (SAME) Student Chapter</h3>
+            <p>Led initiatives connecting students with industry professionals and promoting STEM opportunities for veterans.</p>
+        </article>
+        <article class="award-entry">
+            <h3>Director of Veterans Affairs – Saddleback College</h3>
+            <p>Advocated for veteran students, ensuring access to academic and career resources in technology and engineering.</p>
+        </article>
+      </section>
       <!-- Projects Section -->
       <section id="projects">
         <h2>Projects</h2>
@@ -92,7 +119,17 @@
             <a href="https://github.com/SoulNight/Aurora-Swift" target="_blank" rel="noopener noreferrer">View Project</a>
           </div>
         </article>
-      </section>
+        <!-- E-Nable -->
+          <article class="project-entry">
+            <a href="https://www.picketfencemedia.com/thecapistranodispatch/special-publications/crib-to-college/freshman-advantage-saddleback-college-smooths-the-transition-to-higher-education/article_8ea7ad5e-e009-5627-be7e-e373c4423133.html" target="_blank" rel="noopener noreferrer">
+              <img src="Prosthetics.webp" alt="Prosthetics Project Logo" class="project-logo">
+            </a>
+            <div class="project-info">  <!-- Changed from <article> to <div> -->
+              <h3>3D-Printed Prosthetics</h3>
+              <p>Through the e-NABLE Hand Project, we designed and built free, 3D-printed prosthetic limbs for underprivileged children. Using SolidWorks, 3D printing, and Arduino Uno muscle sensors, we created assistive devices that respond to muscle movements. Working in Saddleback College’s Advanced Manufacturing Lab alongside engineers from Swift Engineering Inc., faculty, and staff, we developed functional and accessible prosthetics that offer kids mobility, confidence, and independence—at no cost to their families.</p>
+              <a href="https://www.picketfencemedia.com/thecapistranodispatch/special-publications/crib-to-college/freshman-advantage-saddleback-college-smooths-the-transition-to-higher-education/article_8ea7ad5e-e009-5627-be7e-e373c4423133.html" target="_blank" rel="noopener noreferrer">View Project</a>
+            </div>
+          </article>
       <!-- Experience Section -->
         <section id="experience">
             <h2>Professional Experience</h2>
