Updated header title and fixed navbar layout

--- a/Portfolio-Project/index.html
+++ b/Portfolio-Project/index.html
@@ -21,7 +21,7 @@
             </a>
               <h1>Tony Bautista</h1>
               <h3>United States Navy Veteran</h3>
-              <h2>Computer Science Graduate, Chapman University</h2>
+              <h2>Bachelor of Science in Computer Science, Chapman University</h2>
               <p>Explore my work in technology, software development, and engineering projects.</p>
           <div class="social-links">
               <!-- Social Links -->
